<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/firstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/firstNameLabel" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" 
            android:hint="@string/lastNameLabel"/>

        <EditText
            android:id="@+id/nhi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nhiLabel"/>

        <EditText
            android:id="@+id/occupation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/occupationLabel" />

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderLabel" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dobLabel" />
        
    </LinearLayout>

</ScrollView>