<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactNumberLabel" />

        <EditText
            android:id="@+id/contactNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactNumberLabel"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp" >

            <TextView
                android:id="@+id/citizenOrResidentLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                android:layout_weight="1"
                android:text="@string/citizenOrResidentLabel" />

            <Switch
                android:id="@+id/citizenOrResident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="No"
                android:textOn="Yes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weightUnit" />
        </LinearLayout>

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weightLabel"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heightUnit" />
        </LinearLayout>

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/heightLabel"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/bloodTypeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bloodTypeLabel" />

            <Spinner
                android:id="@+id/bloodType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/smokerLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/smokerLabel" />

            <Switch
                android:id="@+id/smoker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="No"
                android:textOn="Yes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp" >

            <TextView
                android:id="@+id/drinkerLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drinkerLabel" />

            <Switch
                android:id="@+id/drinker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="No"
                android:textOn="Yes" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>