<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/familyHistoryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/familyHistoryLabel" />

        <EditText
            android:id="@+id/familyHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/familyHistoryHint"
            android:inputType="textMultiLine"
            android:singleLine="false"/>

        <TextView
            android:id="@+id/medicalConditionsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medicalConditionsLabel" />

        <EditText
            android:id="@+id/medicalConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicalConditionsLabel"
            android:inputType="textMultiLine"
            android:singleLine="false"/>
    </LinearLayout>

</ScrollView>